@@ -1,4 +1,5 @@
 
+  * If the track length is not correctly read by taglib read at play time using gstreamer
   * Added Events to last.fm information panel
   * Implemented PlayList import from m3u, pls, axs, xspf playlist file formats
   * Ratings of tracks can be set clicking over the stars in tracks listboxes
